--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -2,7 +2,6 @@
 
 <style>
     .add-model {
-        margin-left: 20px;
         background-color: rgb(241,242, 247);
     }
 
@@ -21,72 +20,73 @@
     }
 </style>
 
-<div class="row">
-    <div class="col-lg-12">
-        <section class="panel add-model">
-            <header class="panel-heading">
-                SubService Add
-            </header>
-            <hr />
-            <div class="panel-body add-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Add" method="post" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="text" asp-for="NameAz" id="f-name" class="form-control" required="" placeholder="Name AZE">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <section class="panel add-model">
+                <header class="panel-heading">
+                    SubService Add
+                </header>
+                <hr />
+                <div class="panel-body add-body">
+                    <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Add" method="post" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="text" asp-for="NameAz" id="f-name" class="form-control" required="" placeholder="Name AZE">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="text" asp-for="NameEn" id="f-name" class="form-control" placeholder="Name ENG">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="text" asp-for="NameRu" id="f-name" class="form-control" placeholder="Name RU">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea class="form-control " id="ccomment" asp-for="ContentAz" rows="15" required="" placeholder="Content AZE"></textarea>
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <textarea class="form-control " id="ccomment" asp-for="ContentAz" rows="15" required="" placeholder="Content AZE"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea class="form-control " id="ccomment" asp-for="ContentEn" rows="15" required="" placeholder="Content ENG"></textarea>
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <textarea class="form-control " id="ccomment" asp-for="ContentEn" rows="15" required="" placeholder="Content ENG"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea class="form-control " id="ccomment" asp-for="ContentRu" rows="15" required="" placeholder="Content RU"></textarea>
+                        <div class="form-group ">
+                            <div class="col-lg-12">
+                                <textarea class="form-control " id="ccomment" asp-for="ContentRu" rows="15" required="" placeholder="Content RU"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <select class="form-control m-bot15" asp-for="ServiceId">
-                                @foreach (ServiceSubServiceAddView item in ViewBag.data)
-                                {
-                                    <option value="@item.Id">@item.Name</option>
-                                }
-                            </select>
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <select class="form-control m-bot15" asp-for="ServiceId">
+                                    @foreach (ServiceSubServiceAddView item in ViewBag.data)
+                                    {
+                                        <option value="@item.Id">@item.Name</option>
+                                    }
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group" style="margin-left: 63%;">
-                        <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success about-button" type="submit">Save</button>
-                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                        <div class="form-group" style="margin-left: 84%;">
+                            <div class="col-lg-offset-2 col-lg-12">
+                                <button class="btn btn-success about-button" type="submit">Save</button>
+                                <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                            </div>
                         </div>
-                    </div>
-                </form>
-            </div>
-        </section>
+                    </form>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
-    
 
 @section scripts{
     <script>
