--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Add.cshtml
@@ -2,7 +2,6 @@
 
     <style>
         .add-model {
-            margin-left: 20px;
             background-color: rgb(241,242, 247);
         }
 
@@ -21,51 +20,53 @@
         }
     </style>
 
-<div class="row">
-    <div class="col-lg-12">
-        <section class="panel add-model">
-            <header class="panel-heading">
-                Add Testimonial Elements
-            </header>
-            <hr />
-            <div class="panel-body add-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Add" method="post">
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input asp-for="FullName" id="f-name" class="form-control" required placeholder="Full Name">
-                        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <section class="panel add-model">
+                    <header class="panel-heading">
+                        Add Testimonial Elements
+                    </header>
+                    <hr />
+                    <div class="panel-body add-body">
+                        <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Add" method="post">
+                            <div class="form-group">
+                                <div class="col-lg-12">
+                                    <input asp-for="FullName" id="f-name" class="form-control" required placeholder="Full Name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-12">
+                                    <input asp-for="Position" id="f-name" class="form-control" required placeholder="Position">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-12">
+                                    <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-12">
+                                    <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-12">
+                                    <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group" style="margin-left: 84%;">
+                                <div class="col-lg-offset-2 col-lg-12">
+                                    <button class="btn btn-success about-button" type="submit">Save</button>
+                                    <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input asp-for="Position" id="f-name" class="form-control" required placeholder="Position">
-                        </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" rows="15" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" rows="15" class="form-control " id="ccomment" required="" placeholder="Content ENG"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group ">
-                        <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" rows="15" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group" style="margin-left: 63%;">
-                        <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success about-button" type="submit">Save</button>
-                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
-                        </div>
-                    </div>
-                </form>
+                </section>
             </div>
-        </section>
+        </div>
     </div>
-</div>
 
 @section scripts{
     <script>
