--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -5,15 +5,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
                 <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.AboutUs)</h2>
                 <div class="wprt-lines style-2 custom-1">
                     <div class="line-1"></div>
                 </div>
-                <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30" style="height:36px"></div>
+                <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
                 <p class="wprt-subtitle">@Model.Tittle</p>
                 <div class="link">  <a asp-controller="About" asp-action="Index" class="wprt-button small rounded-3px">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ReadMore)</a></div>
-                <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30" style="height: 120px;"></div>
+                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
             </div>
             <!-- /.col-md-12 -->
 
