--- a/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
@@ -1,11 +1,10 @@
 ﻿@model IEnumerable<PortfolioViewModel>
 @inject SharedLocalizationService Localizer
 
-<section id="works" class="wprt-section">
+<section id="works" class="wprt-section bground">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
                 <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
                 <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</h2>
                 <div class="wprt-lines style-2 custom-1">
@@ -14,15 +13,17 @@
                 <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
             </div>
             <!-- /.col-md-12 -->
+
         </div>
         <!-- /.row -->
+
     </div>
     <!-- /.container -->
 
     <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
         <div id="project-filter">
             <div id="myfist" class="cbp-filter-item All">
-                <span >@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
+                <span>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
             </div>
             @foreach (var item in Model)
             {
@@ -31,8 +32,7 @@
                 </div>
             }
         </div>
-        <div id="grid-container" class="container-fluid">
-        </div>
+        <div id="grid-container" class="container-fluid"></div>
     </div>
+    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
 </section>
-<div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
