--- a/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
@@ -5,9 +5,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div>
-                <h2>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Blog)</h2>
-                <div class="wprt-lines style-1 custom-2">
+                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+                <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Blog)</h2>
+                <div class="wprt-lines style-2 custom-1">
                     <div class="line-1"></div>
                 </div>
                 <div class="wprt-spacer" data-desktop="50" data-mobi="30" data-smobi="30"></div>
@@ -21,11 +21,10 @@
                         {
                             <div class="cbp-item">
                                 <div class="service-item clearfix">
-
                                     <div class="thumb"><img class="imageblog" src="@item.Image" alt="image" /></div>
                                     <div class="service-item-wrap">
                                         <h3 class="title font-size-18"><a asp-controller="Blog" asp-action="Detail" asp-route-id="@item.Id" blogtitle="@item.Tittle"></a></h3>
-                                        <p blogtext="@item.Content"></p>
+                                        <p class="wrappers" blogtext="@item.Content"></p>
                                         <a asp-controller="Blog" asp-action="Detail" asp-route-id="@item.Id" class="wprt-button small rounded-3px">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ReadMore)</a>
                                     </div>
                                 </div>
@@ -40,9 +39,12 @@
                     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
                 </div>
                 <!-- /.col-md-12 -->
+
             </div>
             <!-- /.row -->
+
         </div>
         <!-- /.container -->
+
     </div>
 </section>
