--- a/ConstructionSite/Views/About/Index.cshtml
+++ b/ConstructionSite/Views/About/Index.cshtml
@@ -15,16 +15,14 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
-                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
-                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
                                     <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.OurHistoryAndFacts)</h2>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
                                     </div>
-                                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30" style="height:36px"></div>
+                                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
                                     <p class="wprt-subtitle">@Model.Title</p>
-                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30" style="height:40px"></div>
+                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
                                 </div>
                                 <!-- /.col-md-12 -->
 
@@ -33,9 +31,9 @@
                                     <div class="wprt-lines style-1 custom-3">
                                         <div class="line-1"></div>
                                     </div>
-                                    <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25" style="height:25px"></div>
+                                    <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25"></div>
                                     <p class=" margin-bottom-25">@Model.Context</p>
-                                    <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30" style="height:0px"></div>
+                                    <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
                                 </div>
                                 <!-- /.col-md-6 -->
 
@@ -81,7 +79,7 @@
                                 <!-- /.col-md-6 -->
 
                                 <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="110" data-mobi="40" data-smobi="40" style="height:110px"></div>
+                                    <div class="wprt-spacer" data-desktop="110" data-mobi="40" data-smobi="40"></div>
                                 </div>
                             </div>
                             <!-- /.row -->
