--- a/ConstructionSite/Views/Blog/Detail.cshtml
+++ b/ConstructionSite/Views/Blog/Detail.cshtml
@@ -3,18 +3,25 @@
     <!-- Featured Title -->
     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
 
-    <div>&nbsp;</div>
-
     <!-- Main Content -->
     <div id="main-content" class="site-main center clearfix">
         <div id="content-wrap" class="container">
-            <div style="text-align: center; font-size:36px">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.News)</div>
-            <div>&nbsp;</div>
             <div id="site-content" class="site-content clearfix" style="width: 100%">
-                <div>
+                <div class="hentry">
                     <div class="container">
-                        <img src="@Model.imagePath" alt="logo" style="width:400px;height:250px;margin-right:15px; float: left;">
                         <h1>@Model.Title</h1>
+                        <div class="post-meta style-3">
+                            <div class="post-meta-content">
+                                <div class="post-meta-content-inner">
+                                    <span class="post-date item">
+                                        <span class="inner"><span class="entry-date">@Model.dateTime.ToUniversalTime().ToString("MMMM dd, yyyy")</span></span>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.post-meta -->
+
+                        <img src="@Model.imagePath" alt="logo" style="width:400px;height:250px;margin-right:15px; float: left;">
                         <p>@Model.Content</p>
                     </div>
                 </div>
@@ -27,4 +34,3 @@
         <!-- /#main-content -->
 
         <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-    </div>
