--- a/ConstructionSite/Views/Message/Index.cshtml
+++ b/ConstructionSite/Views/Message/Index.cshtml
@@ -11,10 +11,12 @@
     }
 </style>
 
+<!-- Featured Title -->
+<div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+
+
 <div id="main-content" class="site-main clearfix">
     <div id="content-wrap">
-        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
-        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
         <h1 class="featured-title-heading" style="text-align: center;">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h1>
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
@@ -22,7 +24,6 @@
                     <section class="wprt-section">
                         <div id="map" class="wprt-map-1"></div>
                         <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div>
-
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -53,6 +54,7 @@
         </div>
     </div>
 </div>
+
 @section scrips{
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script let keys="AIzaSyD2QmvoLHHVFktvA_fyDKKLoRjZJzpEKqg" ;
