--- a/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
@@ -32,7 +32,7 @@
         <div class="langu">
             @foreach (var item in cultureItems)
             {
-                <li id="@item.Name" class="langss" data-name="@item.Name" data-id="@item.Name" style="margin-top:11px; cursor: pointer;">
+                <li id="@item.Name" class="@item.Name" data-name="@item.Name" data-id="@item.Name" style="margin-top:11px; cursor: pointer;">
                     <a class="datas_item langdata" data-id="@item.Name">
                         <input class="contexts" type="hidden" data-id="@Context.Request.Path" />@item.NativeName.Substring(0, 2).ToUpper()
                     </a>
@@ -42,6 +42,7 @@
     </ul>
 </nav>
 <!-- /#main-nav -->
- 
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
 <script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>
 <script src="~/Custom/Js/language.js"></script>
