--- a/ConstructionSite/Views/Shared/Components/Testimonial/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Testimonial/Default.cshtml
@@ -26,7 +26,7 @@
                                     <div class="inner">
                                         <h4 class="name">@item.FullName</h4>
                                         <div class="position">@item.Position</div>
-                                        <blockquote class="whisper" testimonialtext="@item.Content"></blockquote>
+                                        <blockquote class="whisper"  testimonial-text="@item.Content"></blockquote>
                                     </div>
                                 </div>
                             </div>
