--- a/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
@@ -25,18 +25,19 @@
         </li>
 
         <li><a asp-controller="Portfolio" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</a></li>
+        <li><a asp-controller="Galery" asp-action="Index">Qalereya</a></li>
         <li><a asp-controller="Blog" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Blog)</a></li>
         <li><a asp-controller="Message" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
 
         @*@foreach (var item in cultureItems)
-            {
+        {
 
-                <li>
-                    <a class="datas_item langdata" data-id="@item.Name">
-                        <input class="contexts" type="hidden" data-id="@Context.Request.Path" />@item.NativeName.Substring(0, 2).ToUpper()
-                    </a>
-                </li>
-            }*@
+            <li>
+                <a class="datas_item langdata" data-id="@item.Name">
+                    <input class="contexts" type="hidden" data-id="@Context.Request.Path" />@item.NativeName.Substring(0, 2).ToUpper()
+                </a>
+            </li>
+        }*@
 
 
     </ul>
