--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             <div id="site-logo" class="clearfix">
                                 <div id="site-logo-inner">
                                     <a asp-controller="Home" asp-action="Index" title="Construction" rel="home" class="main-logo">
-                                        <img src="~/Assets/Img/svg (1).svg" alt="Construction"  data-width="204" data-height="30" style=" position: absolute; height: 83px; top: 2px;">
+                                        <img src="~/Assets/Img/pdc.svg" alt="Construction"  data-width="204" data-height="30" style=" position: absolute; height: 75px; top: 5px;">
                                     </a>
                                 </div>
                             </div>
