--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Add.cshtml
@@ -74,7 +74,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-11">
-                                <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
+                                <input type="file" name="file[]" placeholder="Images" id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 72%;">
