--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
@@ -63,7 +63,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-11">
-                                <input type="file" asp-for="FileData" placeholder="Images" multiple="multiple" id="f-name" class="form-control">
+                                <input type="file" asp-for="FileData"  id="f-name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group" style="margin-left: 72%;">
