--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -84,7 +84,7 @@
                         </div>
 
                         <div class="wrapper--preview">
-                            @if (Model.Images == null | Model.Images.Count < 1)
+                            @if (Model.Images == null && Model.Images.Count < 1)
                             {
                                 <input type="file" asp-for="files" multiple="multiple" />
                             }
